--- a/WEB/InventoryManagerSystem.WEB/Layout/AuthLayout.razor
+++ b/WEB/InventoryManagerSystem.WEB/Layout/AuthLayout.razor
@@ -1,9 +1,7 @@
 @inherits LayoutComponentBase
 
-<div class="container absolute bottom-0 top-0 left-0 right-0">
-    <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
-        <div class="flex">
-            @Body
-        </div>
+<div class="fixed inset-0 flex items-center justify-center bg-gray-50">
+    <div class="w-full max-w-md p-4">
+        @Body
     </div>
 </div>
