--- a/WEB/InventoryManagerSystem.WEB/Layout/MainLayout.razor
+++ b/WEB/InventoryManagerSystem.WEB/Layout/MainLayout.razor
@@ -1,16 +1,21 @@
 ﻿@inherits LayoutComponentBase
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+<div class="flex min-h-screen">
+    <aside class="bg-gradient-to-b from-[#052767] to-[#3a0647] w-64 h-screen sticky top-0 flex flex-col text-white p-4">
+        <div class="font-bold text-lg mb-4 text-center">Logo</div>
+        <hr class="mb-5"/>
+        <NavMenu />
+    </aside>
 
-        <article class="content px-4">
+    <div class="flex-1 flex flex-col">
+        <header class="flex justify-end items-center h-14 bg-gray-100 border-b border-gray-300 px-6 sticky top-0 z-20">
+            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank" class="text-sm text-gray-700 hover:underline">
+                About
+            </a>
+        </header>
+
+        <main class="flex-1 bg-gray-200 p-3 overflow-auto">
             @Body
-        </article>
-    </main>
+        </main>
+    </div>
 </div>
