--- a/WEB/InventoryManagerSystem.WEB/wwwroot/css/app.css
+++ b/WEB/InventoryManagerSystem.WEB/wwwroot/css/app.css
@@ -34,9 +34,9 @@ h1:focus {
     outline: none;
 }
 
-a, .btn-link {
-    color: #0071c1;
-}
+/*a, .btn-link {*/
+/*    color: #0071c1;*/
+/*}*/
 
 .btn-primary {
     color: #fff;
