--- a/WEB/InventoryManagerSystem.WEB/Components/FloatingInputComponent.razor
+++ b/WEB/InventoryManagerSystem.WEB/Components/FloatingInputComponent.razor
@@ -16,9 +16,12 @@
 </div>
 
 @code {
-    [Parameter] public string Id { get; set; } = "";
-    [Parameter] public string Type { get; set; } = "text";
-    [Parameter] public string Label { get; set; } = "";
+    [Parameter] 
+    public string Id { get; set; } = "";
+    [Parameter] 
+    public string Type { get; set; } = "text";
+    [Parameter] 
+    public string Label { get; set; } = "";
 
     protected override bool TryParseValueFromString(string? value, out string result, out string? validationErrorMessage)
     {
