--- a/WEB/InventoryManagerSystem.WEB/Components/RedirectToLoginComponent.razor
+++ b/WEB/InventoryManagerSystem.WEB/Components/RedirectToLoginComponent.razor
@@ -1,5 +1,3 @@
-@inject NavigationManager Navigation
-@inject AuthenticationStateProvider AuthStateProvider
 
 @code {
     protected override async Task OnInitializedAsync()
@@ -9,7 +7,7 @@
 
         if (!user.Identity?.IsAuthenticated ?? true)
         {
-            Navigation.NavigateTo("/login", true);
+            NavigationManager.NavigateTo("/login", true);
         }
     }
 }
