--- a/WEB/InventoryManagerSystem.WEB/Layout/MainLayout.razor
+++ b/WEB/InventoryManagerSystem.WEB/Layout/MainLayout.razor
@@ -1,21 +1,58 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="flex min-h-screen">
-    <aside class="bg-gradient-to-b from-[#052767] to-[#3a0647] w-64 h-screen sticky top-0 flex flex-col text-white p-4">
-        <div class="font-bold text-lg mb-4 text-center">Logo</div>
-        <hr class="mb-5"/>
-        <NavMenu />
-    </aside>
+<CascadingAuthenticationState>
+    <div class="flex h-screen bg-gray-100 overflow-hidden">
+        <!-- Sidebar -->
+        <AuthorizeView Context="mainUser">
+            <Authorized>
+                <aside class="bg-gradient-to-b from-[#052767] to-[#3a0647] text-white w-64 flex flex-col px-4 py-5 overflow-y-auto sticky top-0 hidden md:flex">
+                    <!-- Logo -->
+                    <LogoComponent />
+                    <!-- Menu content -->
+                    <SideBarContentComponent CanManagerUser="_canManagerUser"/>
+                </aside>
+            </Authorized>
+        </AuthorizeView>
 
-    <div class="flex-1 flex flex-col">
-        <header class="flex justify-end items-center h-14 bg-gray-100 border-b border-gray-300 px-6 sticky top-0 z-20">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank" class="text-sm text-gray-700 hover:underline">
-                About
-            </a>
-        </header>
-
-        <main class="flex-1 bg-gray-200 p-3 overflow-auto">
-            @Body
-        </main>
+        <!-- Main content -->
+        <div class="flex flex-col flex-1">
+            <!-- Navbar -->
+            <HeaderComponent Name="@_name" IsProfileDropdownOpen="_isProfileDropdownOpen" IsProfileDropdownOpenChanged="ToggleProfileDropdown"/>
+            <!-- Page body -->
+            <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
+                @Body
+            </main>
+            <!-- Footer -->
+            <FooterComponent/>
+        </div>
     </div>
-</div>
+</CascadingAuthenticationState>
+
+@code {
+    [CascadingParameter]
+    public Task<AuthenticationState>? MyState { get; set; }
+
+    bool _canManagerUser;
+    string? _name;
+    bool _isProfileDropdownOpen;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _canManagerUser = AuthService.CustomClaimChecker((await MyState!).User, DefaultClaims.ManageUser);
+
+        try
+        {
+            var user = (await MyState!).User;
+            _name = user.Claims.FirstOrDefault(c => c.Type == "Name")?.Value ?? user.Identity?.Name ?? "User";
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
+            _name = "User";
+        }
+    }
+    void ToggleProfileDropdown()
+    {
+        _isProfileDropdownOpen = !_isProfileDropdownOpen;
+    }
+}
